# AI_Slop_Detector

./: .gitignore  README.md
.postman/: resources.yaml
backend/: .gitignore  apikeys.env  gemini_functions.py  helper.py  main.py  pyproject.toml
backend/routes/: factcheck.py  image.py  text.py  video.py
backend/services/: factcheck_service.py  image_service.py  text_service.py  video_service.py
frontend/: generate-icons.js  manifest.json
frontend/background/: background.js
frontend/content/: content.css  content.js
frontend/popup/: popup.css  popup.html  popup.js
frontend/utils/: api.js
